Tue Sep  3 18:36:42 CDT 2002 Adam Heath <doogie@debian.org>

  * version-nr, debian/changelog: Set 1.10.7 version.

Sun Sep  1 23:46:04 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/changelog: Set date for 1.10.6 release.

Sat Aug 31 23:46:04 CDT 2002 Adam Heath <doogie@debian.org>

  * dpkg-deb/main.c, dselect/main.cc, include/dpkg.h.in, lib/startup.c
    main/main.c, main/query.c, split/main.c:  Don't call nffreeall, in any
    of the c/c++ programs.  It appears dselect slightly corrupts it's
    memory enough that it can't be freed without segfaulting.

Sat Aug 31 23:42:08 CDT 2002 Adam Heath <doogie@debian.org>

  * version-nr, debian/changelog: Modified for version 1.10.6.

Thu Aug 29 16:43:45 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/changelog: Set date for release.

Thu Aug 29 16:38:15 CDT 2002 Adam Heath <doogie@debian.org>

  * main/filesdb.c: Back out one memleak fix.

Thu Aug 29 15:13:59 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: Remove /usr/sbin/start-stop-daemon.

Thu Aug 29 14:51:35 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/dbmodify.c, lib/dump.c, lib/lock.c, lib/startup.c, lib/tarfn.c
    main/configure.c, main/filesdb.c, main/query.c: Fix several minor
    memleaks.

Thu Aug 29 14:42:05 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/parsehelp.c: Fix corruption of available file, caused by use of
    memory that was previously freed.

Thu Aug 29 14:31:22 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/parse.c: Check for eof before we getc(), not after.

Sat Aug 24 15:36:41 CDT 2002 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Previous install-infos(before 1.10) handled
    multiple dir file entries, because they would copy the entire stanza
    unmodified.  The newest version does not do this, as it reformats the
    options, and thereby only takes the first line.  So, we now split all
    the lines from the stanza, and process them all.
