@@ -62,6 +62,8 @@ char *nfstrnsave(const char *string, int l) {
 }
 
 void nffreeall(void) {
-  obstack_free(&db_obs, NULL);
-  dbobs_init = 0;
+  if (dbobs_init) {
+    obstack_free(&db_obs, NULL);
+    dbobs_init = 0;
+  }
 }
