@@ -1,3 +1,8 @@
+Tue Sep  3 18:37:45 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * lib/nfmalloc.c: Protect duplicate calls to obstack_free(),
+    as obstack_free segfaults when called without initializing.
+
 Tue Sep  3 18:36:42 CDT 2002 Adam Heath <doogie@debian.org>
 
   * version-nr, debian/changelog: Set 1.10.7 version.
